src/test/resources/arp/invalid/arp_nonlinear_rd.sil
field f: Int

method foo(x: Ref)
//:: ExpectedOutput(internal:feature.unsupported)
requires acc(x.f, rd*rd)
//:: ExpectedOutput(internal:feature.unsupported)
ensures acc(x.f, rd*rd)
{
}